Add in github action for creating Mac, Linux and Windows installations, allow for jpackage jar to contain spark and scala dependencies